# bot

./: Cargo.toml
lib/: mod.rs
lib/args/: mod.rs
lib/config/: mod.rs
lib/error/: mod.rs
lib/traits/: bot.rs
src/: main.rs
src/max/: api.rs  bot.rs  config.rs  mod.rs  state.rs
src/max_bot/: mod.rs
