[package]
name = "print_order_bot"
version = "0.1.0"
edition = "2024"
[lib]
name = "bot"
path = "./lib/mod.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*",  features = ["full"]}
thiserror = { version = "*"}
clap = { version = "4.5.46", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"]}
